Bug fixed: in macro-category-4 section now you can scroll when overflow

--- a/assets/macrocategories.css
+++ b/assets/macrocategories.css
@@ -235,10 +235,10 @@ p.collection-title {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  flex-wrap: wrap;
+  overflow-x: auto;
 }
 .subcategory {
-  width: 15%;
+  min-width: 150px;
   margin: 10px;
 }
 .subcategory p {
